--- a/week01/favorite-city.html
+++ b/week01/favorite-city.html
@@ -11,7 +11,7 @@
     <h1>My Favorite City</h1>
     <p>My favorite city is Lima, Peru. It is my hometown and the food is the best.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Sanisidroskyscrapers.jpg/1280px-Sanisidroskyscrapers.jpg"
-        alt="Lima,Peru">
+        alt="Lima">
 </body>
 
 </html>
