--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </header>
     <main>
         <h1>Matthew Orbegozo | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Matthew Orbegozo" width="200">
-        <p>I am a peruvian living in Utah. I like to play videogames and watch anime.
-            I enjoy a good movie night with my
-            girlfriend and some good food.</p>
+        <img src="images/Profile..jpg" alt="Matthew Orbegozo" width="200">
+        <p>I am a peruvian living in Utah. I like to play videogames and watch anime. I enjoy a good movie night with my
+            girlfriend and some good food. On Summer I like to go hiking and enjoy sunsets at the lake.</p>
     </main>
 
     <footer>
