--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthew Orbegozo | WDD 130 </title>
+    <title>Matthew Luis Orbegozo Reyes | WDD 130 </title>
 </head>
 
 <body>
@@ -15,14 +15,15 @@
         </nav>
     </header>
     <main>
-        <h1>Matthew Orbegozo | WDD 130</h1>
+        <h1>Matthew Luis Orbegozo Reyes | WDD 130</h1>
         <img src="images/profile.jpg" alt="Matthew Orbegozo" width="200">
-        <p>I am a peruvian living in Utah. I like to play videogames and watch anime. I enjoy a good movie night with my
+        <p>Hi my name is Matthew Orbegozo and I am a peruvian living in Utah. I like to play videogames and watch anime.
+            I enjoy a good movie night with my
             girlfriend and some good food. On Summer I like to go hiking and enjoy sunsets at the lake.</p>
     </main>
 
     <footer>
-        <p>©2025 🎮 Matthew 🎮 Lima,Peru</p>
+        <p>© 2025 🎮 Matthew 🎮 Lima,Peru</p>
     </footer>
 </body>
 
