--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <p>© 2025 🎮 Matthew 🎮 Lima,Peru</p>
+        <p>© 2025 🎮 Matthew Orbegozo Reyes 🎮 Lima,Peru</p>
     </footer>
 </body>
 
