--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Matthew Orbegozo">
 </head>
 <body>
-    
+    <header> 
+        <img src="images/basic-logo.png" alt="basic-logo" width="128" height="128">
+    </header>   
+    <nav>
+        <ul>
+            <li><a href="https://byui.edu">BYU-Idaho</a></li>
+            <li><a href="https://churchofjesuschrist.org">The Church</a></li>
+        </ul>
+    </nav>     
+    <main>
+        <h1>Basic HTML Structure </h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, fuga!</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, fuga!</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/arequipa-peru/800x500/1-55f6c59ce8f9c093a9c689067f8674335de544e2.jpeg" alt="Arequipa Temple" width="200">
+    </aside>
+    <footer>
+        <p>Matthew Orbegozo</p>
+    </footer>
 </body>
 </html>
