--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head><link rel="stylesheet" href="styles/styles.css">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matthew Luis Orbegozo Reyes | WDD 130 </title>
+
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
