--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matthew Luis Orbegozo Reyes | WDD 130 </title>
-
+    <meta name="description" content="Describe your home page here using keywords like your name, the course, the purpose of the page ">
+    <meta name="author" content="Matthew Orbegozo">
     <link rel="stylesheet" href="styles/styles.css">
 
 </head>
@@ -24,7 +25,11 @@
             I enjoy a good movie night with my
             girlfriend and some good food. On Summer I like to go hiking and enjoy sunsets at the lake.</p>
     </main>
-
+    <aside>
+        <h2>Peru</h2>
+        <img src="images/peru.jpg" alt="Peru">
+        <p>Peru is a country in South America, that is next to the Pacific Ocean, well know for having the best food around the World.</p>
+    </aside>
     <footer>
         <p>© 2025 🎮 Matthew Orbegozo Reyes 🎮 Lima,Peru</p>
     </footer>
