--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
     <aside>
         <h2>Peru</h2>
-        <img src="images/peru.jpg" alt="Peru">
+        <img src="images/peru.jpg" alt="Peru Macchu Picchu">
         <p>Peru is a country in South America, that is next to the Pacific Ocean, well know for having the best food around the World.</p>
     </aside>
     <footer>
