--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Website about the company">
-    <meta author="Matthew Orbegozo">
+    <meta name="description" content="Website about the company">
+    <meta name="author" content="Matthew Orbegozo">
     <link rel="stylesheet" href="styles/rafting.css">
     <title></title>
 </head>
@@ -58,3 +58,5 @@
         </nav>
     </footer>
 </body>
+
+</html>
