--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Website about the company">
     <meta name="author" content="Matthew Orbegozo">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title></title>
+    <title>About US - White Water Rafting</title>
 </head>
 
 <body>
