--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Website about the company">
-    <meta name="author" content="Matthew Orbegozo">
+    <meta name="description" content="Rafting company offering tours and adventure to all people">
+    <meta name="author" content="Matthew Orbegozo Reyes">
     <link rel="stylesheet" href="styles/rafting.css">
     <title>About US - White Water Rafting</title>
 </head>
