--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Rafting company offering tours and adventure to all people">
     <meta name="author" content="Matthew Orbegozo Reyes">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About US - White Water Rafting</title>
+    <title>About US - New Water Rafting</title>
 </head>
 
 <body>
