--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rafting company offering tours and adventure to all people">
-    <meta name="author" content="Matthew Orbegozo Reyes">
+    <meta name="description"
+        content="Learn about New Water Rafting, our mission, history, and commitment to providing unforgettable river adventures.">
+    <meta name="author" content="Matthew Orbegozo">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About US - New Water Rafting</title>
+    <title>About Us - New Water Rafting</title>
 </head>
 
 <body>
