--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Learn about New Water Rafting, our mission, history, and commitment to providing unforgettable river adventures.">
-    <meta name="author" content="Matthew Orbegozo">
+    <meta name="author" content="Matthew Luis Orbegozo Reyes">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>About Us - New Water Rafting</title>
+    <title> About Us - New Water Rafting </title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <main>
         <div class="hero">
             <img src="images/rafting16_1024.jpg" alt="background">
-            <h1>Title of the Rafting Company</h1>
+            <h1>New Water Rafting</h1>
             <article>
                 <img src="images/rafting36_1024.jpg" alt="Happy Client">
                 <p>company purpose, mission, creed, motto, etc.</p>
