--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,7 +17,7 @@
     <header>
         <img src="images/logo.png" alt="Logo">
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -38,10 +38,46 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>Needs to be replaced later: Here should be a paragraph about the history of the company</p>
+            <div class="history">
+
+                <div class="history_text">
+                    <p>Needs to be replaced later: Here should be a paragraph about the history of the company</p>
+                </div>
+
+                <div class="history_image">
+                    <img src="images/History.jpg" alt="history picture">
+                </div>
+
+                <div class="history_text">
+                    <p>Needs to be replaced later: Here should be a paragraph about the history of the company</p>
+                </div>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="adventure">
+                <figure>
+                    <img src="images/adventure01.jpg" alt="Lava Falls">
+                    <figcaption> Lava Falls </figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure02.jpg" alt="The Terminator">
+                    <figcaption> The Terminator </figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure03.jpg" alt="Ghostrider">
+                    <figcaption> Ghostrider </figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure04.jpg" alt="Double Trouble">
+                    <figcaption> Double Trouble </figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure05.jpg" alt="Big Drop">
+                    <figcaption> Big Drop </figcaption>
+                </figure>
+            </div>
+
         </section>
     </main>
 
