--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="history_image">
-                    <img src="images/history.jpg" alt="history picture">
+                    <img src="images/history2.jpg" alt="history picture">
                 </div>
 
                 <div class="history_text">
