--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -87,15 +87,15 @@
             <h2> We Are Here to Serve You </h2>
             <div class="adventure">
                 <figure>
-                    <img src="images/adventure01.jpg" alt="Mateo Palacios">
-                    <figcaption> Mateo Palacios </figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure02.jpg" alt="Destiny Martinez">
+                    <img src="images/employee1.jpg" alt="Destiny Martinez">
                     <figcaption> Destiny Martinez </figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure03.jpg" alt="Carlos Rubio">
+                    <img src="images/employee2.jpg" alt="Mateo Palacios">
+                    <figcaption> Mateo Palacios </figcaption>
+                </figure>
+                <figure>
+                    <img src="images/employee3.jpg" alt="Carlos Rubio">
                     <figcaption> Carlos Rubio </figcaption>
                 </figure>
             </div>
