--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contact Us - White Water Rafting </title>
+    <title> Contact Us - New Water Rafting </title>
     <meta name="description"
         content="Get in contact with us.">
     <meta name="author" content="Matthew Luis Orbegozo Reyes">
