--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -30,7 +30,8 @@
     <main>
         
         <section>
-            <h2> White Water Rafting </h2>    
+            <div class="hero2"></div>
+                <h1> White Water Rafting </h1>    
         </section>
         <section>
             <div class="info">
