--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -82,7 +82,7 @@
                     <textarea id="message" name="message" placeholder="Type here" rows="4"></textarea>
 
                     <label>
-                        <input type="checkbox" name="subscribe" checked>
+                        <input type="checkbox" id="subscribe" name="subscribe" checked>
                         Please Subscribe me to the monthly newsletter
                     </label>
 
