--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,8 +28,9 @@
     </header>
 
     <main>
-        <div class="hero2"></div>
+        <div class="hero2">
         <h1> White Water Rafting </h1> 
+        </div>
         
         <section>
             <div class="info">
